# snyth-supercollider

./: README.md  TODO.md
midi/: lfo.mid
plugins/: CMakeLists.txt  DDS.sc  Makefile  SN.sc  dds.cpp  sn.cpp
scripts/: greensleeves.scd  lfo.scd
